# rust_test

./: Cargo.toml  Dockerfile  README.md  build.ps1  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: lib.rs  server.rs  vector_store.rs
backend/static/: index.html
data/: reviews.jsonl
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
frontend/static/: index.html  semantic_search.html  style.css
