[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

# Leptos for SPA/SSR
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# WASM and web bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

# Console logging for WASM
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

[lib]
crate-type = ["cdylib"]
